# meeting-transcriber

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.cargo/: config.toml
.github/workflows/: build.yml
src/: config.rs  main.rs  schema.rs
src/audio/: capture.rs  devices.rs  mod.rs  wav.rs
src/export/: markdown.rs  mod.rs  notion.rs  obsidian.rs
src/gemini/: client.rs  mod.rs  prompt.rs  schema_convert.rs
src/ui/: app.rs  mod.rs  recorder_panel.rs  results_panel.rs  settings.rs  theme.rs
