[package]
name = "meeting-transcriber"
version = "1.0.3"
edition = "2021"
license = "MIT"
description = "Cross-platform meeting transcription and analysis tool"

[package.metadata.bundle]
name = "Meeting Transcriber"
identifier = "com.zamrax.meeting-transcriber"
icon = ["meeting-transcriber.ico"]
category = "Productivity"

[dependencies]
eframe = "0.31"
egui = "0.31"
egui_extras = { version = "0.31", features = ["datepicker"] }
reqwest = { version = "0.12", features = ["blocking", "multipart", "json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hound = "3.5"
cpal = "0.15"
base64 = "0.22"
dotenvy = "0.15"
confy = "0.6"
dirs = "5"
rfd = "0.15"
log = "0.4"
env_logger = "0.11"
chrono = "0.4"

image = { version = "0.25", default-features = false, features = ["ico", "png"] }

[features]
default = ["notion"]
notion = []

[build-dependencies]
winresource = "0.1"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[package.metadata.bundle.osx]
NSMicrophoneUsageDescription = "This app needs microphone access to transcribe your meetings."